css/style.css
/* ... */
#slide-7 .line-row {
    padding-bottom: 30px;
}

#slide-7 #veselin-story p {
    font-size: 20px;
    text-align: justify;
}

#slide-7 #veselin-picture {
    max-width: 100%;
    max-height: 600px;
    width: auto;
    float: left;
    /* margin-left: -10px; */
    margin-right: 10px;
    margin-bottom: 5px;
    border-radius: 10px;
    border: 2px solid #08f;
}

@media (min-width: 1200px) {
    #slide-7 #veselin-picture {
        /* margin-bottom: 60px; */
    }
}

@media (max-width: 767px) {
    #slide-7 #veselin-picture {
        max-width: 50%;
    }
}

@media (max-width: 420px) {
    #slide-7 #veselin-picture {
        max-width: 100%;
    }
}

#contacts-row {
	padding-top: 25px;
}

#contacts-row .with-hover-text {
	/* height: 175px; */
	/* overflow: visible; */
	padding-bottom: 30px;
	/* padding-bottom: 20px; */
	/* transition: all ease-in .5s; */
    text-align: center;
    font-size: 20px;
}

#contacts-row .with-hover-text:hover {
    /* height: 175px; */
    /* padding-top: 0px; */
    /* font-size: 26px; */
    /* margin-bottom: 40px; */
    /* border-bottom: 20px solid none; */
    text-shadow: 0px  6px 10px #88f, 
                 6px  0px 10px #88f,
                -6px  0px 10px #88f,
                 0px -6px 10px #88f;
    cursor: pointer;
}

@media (max-width: 767px) {
    .with-hover-text{
        /* margin-bottom: 2em; */
        /* margin-top: 1em; */
    }
}

#contacts-row .with-hover-text p {
}

#contacts-row .with-hover-text i {
	font-size: 80px;
}

#contacts-row .with-hover-text a {
	color: #fff;
	text-decoration: none;
}

#lightbox-out {
	background-color: rgba( 0, 0, 0, 0.7 );
	height: 100%;
	position: fixed;
	width: 100%;
	z-index: 99999;
}

.with-hover-text span {
	/* display: none; */
}

#arrows {
	bottom: 10%;
	height: 80px;
	position: fixed;
	right: 3%;
	width: 30px;
	z-index: 1000;
}

#arrows div {
	background-image: url('../images/website-arrows.png');
	cursor: pointer;
	height: 30px;
	position: absolute;
	width: 30px;
}

#arrows div.disabled {
	cursor: default;
}

#arrow-up {
	background-position: 30px 0;
	left: 0px;
	top: 0px;
}

#arrow-up.disabled {
	background-position: 0 0;
}

#arrow-down {
	background-position: 30px -30px;
	left: 0px;
	bottom: 0px;
}

#arrow-down.disabled {
	background-position: 0 -30px;
}

#arrow-left {
	background-position: 30px -60px;
	left: 0;
	top: 25px;
}

#arrow-left.disabled {
	background-position: 0 -60px;
}

#arrow-right {
	background-position: 30px -90px;
	right: 0;
	top: 25px;
}

#arrow-right.disabled {
	background-position: 0 -90px;
}

.navigation-slide {
	cursor: pointer;
}

#demo-button-windows {
	background-color: rgba(0, 128, 0, 0.5);
	border: 3px solid #0b0;
	border-radius: 30px;
	padding: 15px;
	margin-bottom: 10px;
	font-size: 20px;
	line-height: 24px;
    text-shadow: 0px  2px 5px #aaa, 
                 2px  0px 5px #aaa,
                -2px  0px 5px #aaa,
                 0px -2px 5px #aaa;
}

#demo-button-windows:hover {
	background-color: rgba(0, 128, 0, 0.7);
    text-shadow: 0px  6px 10px #0f0, 
                 6px  0px 10px #0f0,
                -6px  0px 10px #0f0,
                 0px -6px 10px #0f0;	
}

#demo-button-linux {
    background-color: rgba(0, 128, 196, 0.5);
    border: 3px solid #08d;
    border-radius: 30px;
    padding: 15px;
    margin-bottom: 10px;
    font-size: 20px;
    line-height: 24px;
    text-shadow: 0px  2px 5px #aaa, 
                 2px  0px 5px #aaa,
                -2px  0px 5px #aaa,
                 0px -2px 5px #aaa;
}

#demo-button-linux:hover {
    background-color: rgba(0, 128, 196, 0.7);
    text-shadow: 0px  6px 10px #0cf, 
                 6px  0px 10px #0cf,
                -6px  0px 10px #0cf,
                 0px -6px 10px #0cf;    
}

#demo-button-sources {
    background-color: rgba(196, 128, 0, 0.5);
    border: 3px solid #ca0;
    border-radius: 30px;
    padding: 15px;
    margin-bottom: 10px;
    font-size: 20px;
    line-height: 24px;
    text-shadow: 0px  2px 5px #aaa, 
                 2px  0px 5px #aaa,
                -2px  0px 5px #aaa,
                 0px -2px 5px #aaa;
}

#demo-button-sources:hover {
    background-color: rgba(196, 128, 0, 0.7);
    text-shadow: 0px  6px 10px #fc0, 
                 6px  0px 10px #fc0,
                -6px  0px 10px #fc0,
                 0px -6px 10px #fc0;    
}

#demo-button-sources img, 
#demo-button-windows img, 
#demo-button-linux img {
	margin-top: -6px;
	margin-right: 2px;
}

.details-block {
    margin: 0 auto;
}

.details-block ul {
    display: inline-block;
    text-align: left;
}

.payment-block {
    width: 100%;
    max-width: 145px;
    display: inline-block;
    text-align: center;
    padding-bottom: 5px;
}

.payment-double-block {
    width: 100%;
    max-width: 290px;
    display: inline-block;
    text-align: center;
    padding-bottom: 5px;
}

#top_search_panel {
    padding-top: 20px; 
    max-width: 300px; 
    margin: 0 auto;
}

